@@ -104,3 +104,4 @@ Revision	Log Message
 102		Constructors for everyone!
 103		Pass references data structures, not copies (should cause miniscule speedup)
 104		Update logging to be more helpful
+105		Verify all CK2 provinces are mapped
